--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,7 +17,6 @@ header li {
   width: 200px;
   transition: 0.5s;
 }
-
 .navbar-brand img:hover {
   transform: scale(1.1);
 }
@@ -33,11 +32,9 @@ header li {
   border-color: #BBF0F2;
   color: white;
 }
-
 .btn-custom:hover {
   background-color: #2f3438;
   border-color: #2f3438;
-  color: white;
 }
 
 .dropdown:hover .dropdown-menu {
@@ -91,7 +88,6 @@ header li {
   opacity: 100;
   transition: opacity 0.3s ease;
 }
-
 .overlay p {
   font-size: 20px;
   font-weight: bold;
@@ -137,11 +133,7 @@ header li {
   margin-top: 300px;
 }
 
-.fa-chevron-right {
-  font-size: 40px;
-  margin-left: 20px;
-}
-
+.fa-chevron-right,
 .fa-chevron-left {
   font-size: 40px;
   margin-left: 20px;
@@ -167,35 +159,18 @@ header li {
   border-radius: 20px;
 }
 
-.top-images {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.top-images img {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 50px;
-  width: 200px;
-  background-color: rgb(240, 240, 240);
-  padding: 10px;
-  border-radius: 10px;
-}
-
+.top-images,
 .bottom-images {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.top-images img,
 .bottom-images img {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 30px;
   width: 200px;
-  background-color: #f0f0f0;
+  background-color: rgb(240, 240, 240);
   padding: 10px;
   border-radius: 10px;
 }
@@ -203,7 +178,6 @@ header li {
 .expand {
   transition: 0.2s;
 }
-
 .expand:hover {
   transform: scale(1.1);
 }
@@ -242,7 +216,6 @@ header li {
   text-align: center;
   filter: grayscale(0.5);
 }
-
 .grid-item:hover {
   filter: grayscale(0);
 }
@@ -290,12 +263,10 @@ header li {
   text-align: center;
   color: white;
 }
-
 .text-container1 h1 {
   font-size: 50px;
   font-weight: 700;
 }
-
 .text-container1 p {
   font-size: 30px;
 }
@@ -313,14 +284,12 @@ header li {
   margin-left: 40px;
   margin-top: 20px;
 }
-
 .text-container2 h2 {
   font-size: 50px;
   font-weight: 600;
   margin-bottom: 40px;
   margin-top: 20px;
 }
-
 .text-container2 p {
   font-size: 30px;
   font-weight: 400;
@@ -330,12 +299,10 @@ header li {
   display: flex;
   align-items: center;
 }
-
 .text-with-button p {
   margin-right: 20px;
   margin-top: 10px;
 }
-
 .text-with-button button {
   height: 30px;
   width: 300px;
@@ -346,7 +313,6 @@ header li {
   padding: 0px;
   border-radius: 40px;
 }
-
 .text-with-button button i {
   margin-right: 10px;
   margin-left: 5px;
@@ -383,11 +349,7 @@ header li {
   margin-left: 80px;
 }
 
-.card-body ul li a {
-  text-decoration: none;
-  color: black;
-}
-
+.card-body ul li a,
 .page-item a {
   text-decoration: none;
   color: black;
@@ -400,25 +362,21 @@ footer {
   color: white;
   margin-top: 20px;
 }
-
 footer .row {
   margin-top: 10px;
   padding: 4px;
   margin-bottom: 0px;
 }
-
 footer img {
   height: auto;
   width: 300px;
 }
-
 footer a {
   font-size: 20px;
   text-decoration: none;
   color: white;
   padding: 10px;
 }
-
 footer p {
   font-size: 20px;
 }
