--- a/Estilo/_nosotros.scss
+++ b/Estilo/_nosotros.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(img/sea-turtle-1851102_1280.jpg);
+    background-image: url(../img/sea-turtle-1851102_1280.jpg);
     background-position: center;
     background-size: cover;
     height: 250px;
@@ -49,31 +49,7 @@
     }
 }
 
-.text-with-button {
-    display: flex;
-    align-items: center;
 
-
-    p {
-    margin-right: 20px;
-    margin-top: 10px;
-    }
-    button{
-    height: 30px;
-    width: 300px;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-    background-color: green;
-    padding: 0px;
-    border-radius: 40px;
-
-        i{
-        margin-right: 10px;
-        margin-left: 5px;
-        }
-    }
-}
 
 .d-flex input{
     border-radius: 40px;
@@ -104,15 +80,3 @@
 
 
 
-.productosh2{
-    color: #1B878B;
-    margin-top: 20px;
-    margin-left: 80px;
-}
-
-
-.card-body ul li a,
-.page-item a{
-    text-decoration: none;
-    color: black;
-}
