--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap");
-
 header li {
   padding: 0px 0px 0px 5px;
 }
@@ -117,7 +116,7 @@ header li {
 .carousel-control-next-icon {
   width: 50px;
   height: 50px;
-  background-image: url();
+  background-image: url(../img/);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -131,7 +130,7 @@ header li {
 }
 
 .fondo {
-  background-image: url(img/animal-3414131_1280.jpg);
+  background-image: url(../img/animal-3414131_1280.jpg);
   background-size: cover;
   background-position: top;
   height: 700px;
@@ -212,48 +211,73 @@ header li {
 }
 
 .item1 {
-  background-image: url(img/animals-7696695_1280.jpg);
+  background-image: url(../img/animals-7696695_1280.jpg);
 }
 
 .item2 {
-  background-image: url(img/cat-7544821_1280.jpg);
+  background-image: url(../img/cat-7544821_1280.jpg);
 }
 
 .item3 {
-  background-image: url(img/dog-7701374_1280.jpg);
+  background-image: url(../img/dog-7701374_1280.jpg);
 }
 
 .item4 {
-  background-image: url(img/2.jpg);
+  background-image: url(../img/2.jpg);
 }
 
 .item5 {
-  background-image: url(img/australian-shepherd-7664795_1280.jpg);
+  background-image: url(../img/australian-shepherd-7664795_1280.jpg);
 }
 
 .item6 {
-  background-image: url(img/pit-bull-7825554_1280.jpg);
+  background-image: url(../img/pit-bull-7825554_1280.jpg);
 }
 
 .item7 {
-  background-image: url(img/dog-1168663_1280.jpg);
+  background-image: url(../img/dog-1168663_1280.jpg);
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+.text-with-button {
+  display: flex;
+  align-items: center;
+}
+.text-with-button p {
+  margin-right: 20px;
+  margin-top: 10px;
+}
+.text-with-button button {
+  height: 30px;
+  width: 300px;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  background-color: green;
+  padding: 0px;
+  border-radius: 40px;
+}
+.text-with-button button i {
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
+.productosh2 {
+  color: #1B878B;
+  margin-top: 20px;
+  margin-left: 80px;
+}
+
+.card-body ul li a,
+.page-item a {
+  text-decoration: none;
+  color: black;
 }
 
 .seaimg {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(img/sea-turtle-1851102_1280.jpg);
+  background-image: url(../img/sea-turtle-1851102_1280.jpg);
   background-position: center;
   background-size: cover;
   height: 250px;
@@ -296,29 +320,6 @@ body {
   font-weight: 400;
 }
 
-.text-with-button {
-  display: flex;
-  align-items: center;
-}
-.text-with-button p {
-  margin-right: 20px;
-  margin-top: 10px;
-}
-.text-with-button button {
-  height: 30px;
-  width: 300px;
-  font-size: 20px;
-  font-weight: 700;
-  color: white;
-  background-color: green;
-  padding: 0px;
-  border-radius: 40px;
-}
-.text-with-button button i {
-  margin-right: 10px;
-  margin-left: 5px;
-}
-
 .d-flex input {
   border-radius: 40px;
   width: 300px;
@@ -342,18 +343,6 @@ body {
   font-size: 50px;
   margin-bottom: 50px;
   margin-top: 40px;
-}
-
-.productosh2 {
-  color: #1B878B;
-  margin-top: 20px;
-  margin-left: 80px;
-}
-
-.card-body ul li a,
-.page-item a {
-  text-decoration: none;
-  color: black;
 }
 
 footer {
@@ -552,6 +541,15 @@ footer p {
   .contacto h2 {
     font-size: 30px;
   }
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
 /*# sourceMappingURL=estilo.css.map */
